--- a/README.org
+++ b/README.org
@@ -4,7 +4,7 @@
 
 “Etherpad is a highly customizable Open Source online editor providing collaborative editing in really real-time. Etherpad allows you to edit documents collaboratively in real-time, much like a live multi-player editor that runs in your browser. Write articles, press releases, to-do lists, etc. together with your friends, fellow students or colleagues, all working on the same document at the same time.”  https://etherpad.org/
 
-The Etherpad API provides a way to add, delete and edit pads. It also enables access to changesets and author information required for displaying changes between revisions but doesn’t appear to provide a way to send changesets (c.f. using the API call [[https://etherpad.org/doc/v1.8.5/#index_getrevisionchangeset_padid_rev][getRevisionChangeset(padID, [rev])]] and the [[ https://etherpad.org/doc/v1.8.4/#index_changeset_library][changeset]] format)
+The Etherpad API provides a way to add, delete and edit pads. It also enables access to changesets and author information required for displaying changes between revisions but doesn’t appear to provide a way to send changesets (c.f. using the API call [[https://etherpad.org/doc/v1.8.5/#index_getrevisionchangeset_padid_rev][getRevisionChangeset]] and the [[ https://etherpad.org/doc/v1.8.4/#index_changeset_library][changeset]] format)
 
 [[layered-0.jpg]]
 
@@ -32,7 +32,7 @@ To connect to an existing etherpad server you need to configure the server url a
 
 To open a pad for editing try ~M-x etherpad-edit~ and enter the name of the pad.
 
-To update a pad with changes from the current buffer use ~etherpad-save~ (add a keybinding if required). If the pad has changed there may be a warning about changes/sync/etc.
+To update a pad with changes from the current buffer use ~etherpad-save~ (which can be bound to ~C-c c~). If the pad has changed there may be a warning about changes/sync/etc.
 
 Automatic sync between an emacs buffer and the etherpad server can be enabled by setting ~etherpad-autosync~ or interactively with ~etherpad-autosync-enable~ or ~etherpad-autosync-disable~ (and/or toggled with ~etherpad-autosync-toggle~)
 
